# musictransfer

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  run.py  tailwind.config.js
frontend/: package.json  tailwind.config.js
src/: __main__.py  app.py  config.py
src/connectors/: youtube_connector.py
src/converters/: data_converter.py
src/engine/: migration_engine.py
src/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json
src/frontend/src/: App.tsx  index.css  types.ts
src/frontend/src/components/: AlertOverlay.tsx  AppHeader.tsx  AuthenticationCard.tsx  Hero.tsx  MigrationCard.tsx  ProgressCard.tsx
src/models/: __init__.py
src/musictransfer/: __main__.py  app.py  run.py
src/musictransfer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/musictransfer/connectors/: spotify_connector.py  youtube_connector.py
src/musictransfer/converters/: data_converter.py
src/musictransfer/engine/: migration_engine.py
src/musictransfer/static/css/: input.css  output.css
src/musictransfer/templates/: callback.html  error.html
src/static/css/: style.css
src/static/js/: main.js
src/templates/: callback.html  error.html  index.html
src/utils/: error_handling.py
