[project]
name = "musictransfer"
version = "1.0.0"
description = "Spotify and YouTube Music Playlist Migration Tool"
readme = "README.md"
authors = [
    {name = "Inasayang", email = "xiayangzzw@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "authlib>=1.2.1",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/Inasayang/musictransfer"
Repository = "https://github.com/Inasayang/musictransfer"

[project.scripts]
musictransfer = "musictransfer.__main__:main"
start = "musictransfer.run:main"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.4.1",
]

[tool.ruff]
# Disable the C0114 rule (missing module docstring)
lint.ignore = ["D100"]

[tool.pylint.messages_control]
disable = "C0114"